--- a/Day_02/HTML_CSS/Bai_1/index.html
+++ b/Day_02/HTML_CSS/Bai_1/index.html
@@ -22,7 +22,7 @@
                 <h1>Online Shopping mall</h1>
                 <h5>The center point of the professional programming</h5>
             </div>
-            <img class="pull-right" src="images/Banner.png" alt="">
+            <img class="pull-right" src="images/Banner.png" alt="" style="width: 100%;">
         </header>
 
         <nav class="navbar navbar-inverse">
