--- a/Day_02/JavaScript/DoYouLoveMe/index.html
+++ b/Day_02/JavaScript/DoYouLoveMe/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <h3>Do You Love Me</h3>
-    <button id="yes">Yes</button> <button id="no" style="position: absolute;">No</button>
+    <button id="yes">Yes</button> <button id="no" style="position: relative;">No</button>
     
 </body>
 </html>
