--- a/Day_02/HTML_CSS/Bai_3/index.html
+++ b/Day_02/HTML_CSS/Bai_3/index.html
@@ -64,13 +64,13 @@
             </div>
             <div class="col-md-2">
                 <a href="">
-                    <img src="images/icon1.png" alt=""> <br>
+                    &nbsp; &nbsp; &nbsp; &nbsp; <img src="images/icon1.png" alt=""> <br>
                     <strong class="text-primary">COMPARE DEVICES</strong>
                 </a>
             </div>
             <div class="col-md-2">
                 <a href="">
-                    <img src="images/icon2.png" alt=""> <br>
+                    &nbsp; &nbsp; &nbsp; &nbsp; <img src="images/icon2.png" alt=""> <br>
                     <strong class="text-primary">HELP ME CHOOSE</strong>
                 </a>
 
@@ -83,13 +83,13 @@
             </div>
             <div class="col-md-3">
                 <a href="">
-                    <img src="images/icon4.png" alt=""> <br>
+                    &nbsp; &nbsp; &nbsp; &nbsp; &emsp; &emsp; &emsp; <img src="images/icon4.png" alt=""> <br>
                     <strong class="text-primary">PERSONAL SHOPPING APPOINTMENTS</strong>
                 </a>
             </div>
             <div class="col-md-2">
                 <a href="">
-                    <img src="images/icon5.png" alt=""> <br>
+                    <img src="images/icon5.png" alt="" style="margin-left: 10px;"> <br>
                     <strong class="text-primary text-center">FORBUSINESS</strong>
                 </a>
             </div>
